# asst1_drawsvg

./: README.md  index.html  params.json
include/: CMU462.h  complex.h  matrix3x3.h  osdtext.h  renderer.h  viewer.h
src/: CMakeLists.txt  drawsvg.cpp  drawsvg.h  hardware_renderer.cpp  hardware_renderer.h  illustrator.cpp  illustrator.h  main.cpp  software_renderer.cpp  svg.cpp  texture.h  triangulation.cpp  viewport.cpp
src/hardware/: hardware.cmake
src/reference/: reference.cmake
